--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"><title>3-Rex</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/Dino-Run/favicon.ico"></head><body><script src="/Dino-Run/main.f5c7d94b06fe98d721ef.js"></script></body></html>
+<!doctype html><html><head><meta charset="utf-8"><title>dino-run</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/Dino-Run/favicon.ico"></head><body><script src="/Dino-Run/main.f5c7d94b06fe98d721ef.js"></script></body></html>
