--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><meta charset="utf-8"><title>dino-run</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/Dino-Run/favicon.ico"></head><body><script src="/Dino-Run/main.300c314070d3ead59d4a.js"></script></body></html>
+<!doctype html><html><head><meta charset="utf-8"><title>dino-run</title><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/Dino-Run/favicon.ico"><script defer="defer" src="/Dino-Run/main.bfdc83c55eac03ee29a2.js"></script></head><body></body></html>
